# jinja2-cli

./: .dockerignore  .envrc  .gitignore  .travis.yml  Dockerfile  Justfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-bake.hcl  flake.nix  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  docker.yml  publish.yml
docs/: README.md  cli.md  development.md  docker.md  examples.md  extensions.md  filters.md  formats.md  quickstart.md
jinja2cli/: __init__.py  cli.py  exceptions.py  filters.py
jinja2cli/tests/: __init__.py  tests.py
samples/: environ.jinja2  sample.jinja2  sample.json  sample.sh  sample.tex  sample.yaml
tests/: common.py  test_cli_extensions.py  test_data_input_stdin.py  test_format_env.py  test_format_hjson.py  test_format_ini.py  test_format_json.py  test_format_json5.py  test_format_querystring.py  test_format_toml.py  test_format_xml.py  test_format_yaml.py  test_formats.py  test_jinja2.py  test_jinja2cli.py  test_opt_d_variables.py  test_opt_extensions.py  test_opt_format.py  test_opt_format_auto.py  test_opt_outfile.py  test_opt_section.py  test_opt_strict.py  test_parse_qs.py  test_recursive_env.py  utils.py
tests/bats/: cli.bats
tests/files/: custom_template.j2  maindir_template.j2  multi_section_template.j2  recursive_template.j2  recursive_template.yml  recursive_template_non_recursive_result.html  recursive_template_recursive_result.html  single_section_template.j2  template_with_macros.j2  xml_template.j2
tests/files/data/: data.env  (+9 more)
tests/helpers/: has_module.py  has_toml.py
(+44 files in other folders)
